--- a/index.html
+++ b/index.html
@@ -1,253 +1,105 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
 
   <link rel="shortcut icon" href="/faviconV2.png">
-  <meta name="description" content="Watch this amazing video on Snapchat Spotlight! Here's a brief description of the content.">
+  <meta name="description" content="Watch this amazing video on Snapchat Spotlight! .">
 
   <title>Snapchat</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+
   <style>
-    /* General Reset */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
-      outline: none !important;
     }
-  
-    /* Disable caret globally */
+
     body {
-      caret-color: transparent;
-      font-family: 'Poppins', sans-serif;
-      background-color: #FFFC00;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       height: 100vh;
+      background-color: #ffffff;
+      font-family: Arial, sans-serif;
       text-align: center;
+      position: relative;
     }
-  
-    /* Loading Screen Styling */
-    .loader-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(20, 20, 20, 0.926);
+
+    .loader {
       display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 9999;
-      opacity: 1;
-      visibility: visible;
-      transition: opacity 0.5s ease, visibility 0.5s ease;
+      width: 150px;
+      height: 150px;
     }
-  
-    /* Hide the loader with smooth transition */
-    .loaded .loader-overlay {
-      opacity: 0;
-      visibility: hidden;
+
+    .logo {
+      width: 80px;
+      height: 80px;
+      background: url('/snapchat-logo-svgrepo-com.svg') no-repeat center center / contain;
+      animation: heartbeat 2.5s infinite; /* Slowed down to 3s */
     }
-  
-    .container-loader {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  
-    .circle {
+
+    .bottom-text {
       position: absolute;
-      border-radius: 50px;
-    }
-  
-    #circle-rotation {
-      width: 35px;
-      height: 35px;
-      border-radius: 50%;
-      border: 3px solid gray;
-      border-bottom-color: transparent;
-      animation: spin 1s linear infinite;
-    }
-  
-    #circle-2-rotation {
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      border: 3px solid gray;
-      border-bottom-color: transparent;
-      animation: spin2 0.95s linear infinite;
-    }
-  
-    @keyframes spin {
-      from {
-        transform: rotate(0deg);
-      }
-      to {
-        transform: rotate(360deg);
-      }
-    }
-  
-    @keyframes spin2 {
-      from {
-        transform: rotate(360deg);
-      }
-      to {
-        transform: rotate(0deg);
-      }
-    }
-  
-    /* Main Container */
-    .container {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-  
-    .logo img {
-      width: 50px;
-      margin-top: 20px;
-    }
-  
-    .avatar-container {
-      margin-bottom: 20px;
-    }
-  
-    .avatar {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      border: 4px solid #FFFC00;
-      background-color: #fffd80;
-    }
-  
-    .avatar img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  
-    .username {
-      margin-top: -10px;
-      font-size: 15px;
-      font-weight: 600;
-      color: black;
-    }
-  
-    .remove-account {
-      font-size: 12px;
-      color: #00A6FF;
-      margin-top: 10px;
-      margin-bottom: 40px;
-      cursor: pointer;
-      font-weight: 600;
-    }
-  
-    .login-btn {
-      background-color: #00A6FF;
-      color: white;
-      border: none;
-      font-size: 16px;
-      width: 175px;
-      padding: 12px 0;
-      border-radius: 25px;
-      margin-bottom: 20px; /* Adjust for spacing above fixed buttons */
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow effect */
-    }
-  
-    .login-btn:hover {
-      background-color: #008ed6;
-    }
-  
-    .button-container {
-      display: flex;
-      width: 100%;
-      
-      bottom: 0;
-      margin-top: 20px;
-    }
-  
-    .button {
-      flex: 1;
-      height: 50px;
-      font-size: 16px;
+      bottom: 20px;
       text-align: center;
-      line-height: 50px;
-      background-color: transparent;
-      font-weight: 600;
-      cursor: pointer;
+      width: 100%;
     }
-  
-    .button:nth-child(2) {
-      border-left: 2px solid #dfdb00;
+
+    .copyright {
+      font-size: 12px;
+      color: #888;
     }
-  
-    .button:active {
-      opacity: 0.8;
+
+    .brand {
+      font-size: 18px;
+      font-weight: bold;
+      color: #000;
+      margin-top: 9px;
+      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
     }
-  
-    a {
-      text-decoration: none;
-    }
-  
-    /* Responsive adjustments for smaller screens */
-    @media (max-width: 768px) {
-      .login-btn {
-        margin-bottom: 20px; /* Adjust spacing for smaller screens */
+
+    @keyframes heartbeat {
+      0%, 100% {
+        transform: scale(1);
+      }
+      25% {
+        transform: scale(1.2);
+      }
+      50% {
+        transform: scale(1);
+      }
+      75% {
+        transform: scale(1.2);
       }
     }
   </style>
 </head>
 <body>
-  <!-- Loading Screen -->
-  <div class="loader-overlay" id="loading">
-    <div class="container-loader">
-      <div id="circle-rotation" class="circle"></div>
-      <div id="circle-2-rotation" class="circle-2"></div>
-    </div>
+  <style>
+    * {
+        -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+        -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
+        outline: none !important;
+    }
+</style>
+  <div class="loader">
+    <div class="logo"></div>
   </div>
-
-  <!-- Snapchat Logo -->
-  <div class="logo">
-    <img src="/icon.svg" alt="Snapchat Logo">
+  <div class="bottom-text">
+    <div class="copyright">© Snap Inc 2024</div>
+    <div class="brand">Snapchat</div>
   </div>
-
-  <div class="container">
-    <div class="avatar-container">
-      <div class="avatar">
-        <img src="/31151407-102973017962_11-s5-v1.webp" alt="User Avatar">
-      </div>
-    </div>
-
-    <div class="username">tejazmali</div>
-    <a href="https://help.snapchat.com/hc/en-us/articles/7012328360596-How-do-I-deactivate-or-delete-my-Snapchat-account">
-      <div class="remove-account">Remove account</div>
-    </a>
-  </div>
-
-  <button class="login-btn" onclick="window.location.href='/login.html';">Log In</button>
-
-  <div class="button-container">
-    <div class="button" onclick="window.location.href='https://accounts.snapchat.com/v2/signup';">Sign Up</div>
-    <div class="button" onclick="window.location.href='/login.html';">Switch Account</div>
-  </div>
-
   <script>
-    // Ensure the loader hides when the page fully loads
-    window.onload = function () {
-      // Add the 'loaded' class to the body to hide the loader
-      document.body.classList.add('loaded');
-    };
-  </script>
+    // Redirect to the main index page after a delay (e.g., 3 seconds)
+    setTimeout(function() {
+        window.location.href = "/Acconts.html"; // Redirect to your main index page
+    }, 2400); // 3000ms = 3 seconds
+</script>
 </body>
 </html>
