--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
 
-  <link rel="shortcut icon" href="/faviconV2.png">
+  <link rel="shortcut icon" href="img/faviconV2.png">
   <meta name="description" content="Watch this amazing video on Snapchat Spotlight! .">
 
   <title>Snapchat</title>
@@ -40,7 +40,7 @@
     .logo {
       width: 80px;
       height: 80px;
-      background: url('/snapchat-logo-svgrepo-com.svg') no-repeat center center / contain;
+      background: url('img/snapchat-logo-svgrepo-com.svg') no-repeat center center / contain;
       animation: heartbeat 2.5s infinite; /* Slowed down to 3s */
     }
 
