created folder / fix bugs

--- a/Acconts.html
+++ b/Acconts.html
@@ -48,6 +48,6 @@
     <div class="button" onclick="window.location.href='/login.html';">Switch Account</div>
   </div>
 
-<script src="/js/script.js"></script>
+<script src="/js/account.js"></script>
 </body>
 </html>
