--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <div class="copyright">© Snap Inc 2024</div>
     <div class="brand">Snapchat</div>
   </div>
-<script src="/js/script.js"></script>
+<script src="/js/index.js"></script>
 </body>
 </html>
