--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
       <button type="submit" class="login-button">Log In</button>
     </form>
     
-    <script src="/js/script.js"></script>
+    <script src="/js/login.js"></script>
     
 </body>
 </html>
