--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
   <meta property="og:site_name" content="Snapchat Spotlight">
   <link rel="stylesheet" href="/css/login.css">
   <title>Login • Snapchat</title>
+  <CSS3: For styling and responsive design.
 
 </head>
 <body>
