--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
-
+  < CSS3: For styling and responsive design.
+   <JavaScript: For added interactivity.
   <link rel="shortcut icon" href="img/faviconV2.png">
   <meta name="description" content="Watch this amazing video on Snapchat Spotlight! .">
 <link rel="stylesheet" href="/css/index.css">
